# stregion

./: MANIFEST.in  PKG-INFO  README.md  pyproject.toml  setup.cfg  setup.py  test.py
.github/workflows/: ci.yml  publish-to-pypi.yml  test.yml
doc/: conf.py
doc/figures/: demo_filter_mask.py  test_region_drawing.py  test_region_drawing2.py
examples/: demo_helper.py  demo_print_region.py  demo_region03.py  demo_region04.py  demo_region_filter01.py
lib/: __init__.py  ds9_region_parser.py  wcs_converter.py  wcs_helper.py
pyregion.egg-info/: SOURCES.txt  requires.txt  top_level.txt
src/: _region_filter.c
stregion/: __init__.py  region_to_filter.py  wcs_helper.py
tests/: test_region.py  test_wcs_helper.py
